--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -2,3 +2,12 @@
     display: grid;
     grid-template-columns: 4fr 1fr;
 }
+
+.products-container {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 45px;
+    margin-top:200px;
+    margin-left:100px;
+    margin-right:80px;
+}
