added cart button on product card

--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -1,28 +1,45 @@
 .product {
+    position: relative;
     width: 300px;
     height: 508px;
     border: 1px solid grey;
-    border-radius:20px;
+    border-radius: 8px;
 }
 
 .product img {
     width: 286px;
     height: 286px;
-    border-radius:20px;
-    margin:7px;
+    border-radius: 20px;
+    margin: 7px;
     margin-bottom: 0;
 }
 
-.product-info{
+.product-info {
     margin: 7px;
 }
-.product-info p{
-    margin-top:0;
+
+.product-info p {
+    margin-top: 5px;
+    margin-bottom: 0;
 }
 
-.product-title{
+.product-title {
     font-family: 'Lato';
-font-style: normal;
-font-weight: 400;
-font-size: 21px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 21px;
+}
+
+.btn-cart {
+    position: absolute;
+    color: #0E161A;
+    background-color: #FFE0B3;
+    width: 100%;
+    border: 0px solid #95A0A7;
+    border-radius: 0px 0px 8px 8px;
+    bottom: 0;
+}
+
+.btn-cart:hover {
+    background-color: orange;
 }
