--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -7,7 +7,13 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap: 45px;
-    margin-top:200px;
-    margin-left:100px;
-    margin-right:80px;
+    margin-top: 200px;
+    margin-left: 100px;
+    margin-right: 80px;
+}
+
+@media screen and (max-width:1400px) {
+    .products-container {
+        grid-template-columns: repeat(2, 1fr);
+    }
 }
