--- a/src/components/Product/Product.css
+++ b/src/components/Product/Product.css
@@ -38,8 +38,15 @@
     border: 1px solid #95A0A7;
     border-radius: 0px 0px 8px 8px;
     bottom: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .btn-cart:hover {
     background-color: orange;
+}
+
+.btn-cart p {
+    margin-right: 10px;
 }
