--- a/src/components/Shop/Shop.css
+++ b/src/components/Shop/Shop.css
@@ -12,6 +12,12 @@
     margin-right: 80px;
 }
 
+.cart-container {
+    background-color: rgba(255, 153, 0, 0.3);
+    padding-top: 30px;
+    padding-left: 20px;
+}
+
 @media screen and (max-width:1400px) {
     .products-container {
         grid-template-columns: repeat(2, 1fr);
