--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -11,7 +11,7 @@
 .header a {
     text-decoration: none;
     color: white;
-    margin-left: 32px;
+    margin-right: 32px;
 }
 
 .header a:hover {
@@ -19,5 +19,9 @@
 }
 
 .user-name {
+    display: inline-block;
     color: white;
+    background-color: rgb(8, 126, 126);
+    padding: 5px 10px;
+    margin-left: 20px;
 }
